# aoc2020

./: .gitignore  pyproject.toml
aoc2020/: core.py  day2.py  day3.py
tests/: test_common.py  test_core.py  test_day1.py  test_day2.py  test_day3.py
