[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = ""
authors = ["William Dang"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.19.0"
typing = "^3.7.4"
mypy = "^0.790"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
